# qddc

./: .gitignore  LICENSE  README.md  README_CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/core/: mod.rs  sampling.rs  scene.rs  sprite.rs  world.rs
crate/src/math/: matrix.rs  mod.rs
src/: index.ts  main.ts  style.css
src/engine/: engine.ts  index.ts  sprite.ts
