[package]
name = "qddc-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM core for QDDC 2D Canvas renderer"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
] }

[profile.release]
opt-level = "s"     # 优化体积
lto = true          # 链接时优化
